--- a/public/index.html
+++ b/public/index.html
@@ -99,7 +99,7 @@
         <h1>HB JSP EDU</h1>
         <div class="button-grid">
             <a href="https://github.com/hslcrb/hbjspeducos" class="btn btn-github">GitHub 저장소 바로가기</a>
-            <a href="/public/20251223/index.html" class="btn btn-version" id="version-link">251223 버전 바로가기</a>
+            <a href="/20251223/index.html" class="btn btn-version" id="version-link">251223 버전 바로가기</a>
             <a href="https://rheehose.com" class="btn btn-back">개발자 사이트로 돌아가기</a>
         </div>
     </div>
